gap between sections fixed

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -68,8 +68,7 @@ body
       max-width: 100% 
 
 .education
-  min-height: 80vw
-  padding: 10%
+  padding-top: 10%
 .timeline 
     position: relative
     &-card 
